Move question cards into js code for index.html page

--- a/index.html
+++ b/index.html
@@ -15,154 +15,7 @@
         <!--============ MAIN SECTION WITH QUIZ CARDS =============-->
         <main class="main-content">
             <section class="question-cards">
-                <div class="cards">
-                    <section class="card">
-                        <button class="add-to-bookmark filled ">
-                            <i class="fa-solid fa-bookmark fa-2xl"></i>
-                        </button>
-                        <h4> How do you center content horizontally? </h4>
-                        <br/>
-                        <button class="show-answer">Show Answer</button>
-                        <button class="hide-answer" style="display: none;">Hide Answer</button>   
-                        <div class="answer">Flexbox justify-content center</div>
-                        <ul class="list-tags">
-                            <li class="list-item-tags">#html</li>
-                            <li class="list-item-tags">#css</li>
-                            <li class="list-item-tags">#easy</li>
-                        </ul>
-                    </section>
-                    <section class="card">
-                        <button class="add-to-bookmark filled">
-                            <i class="fa-solid fa-bookmark fa-2xl"></i>
-                        </button>
-                        <h4> How do you Position element outside flow? </h4>
-                        <br/>
-                        <button class="show-answer">Show Answer</button>
-                        <button class="hide-answer" style="display: none;">Hide Answer</button>
-                        <div class="answer">Using Absolute positioning</div>
-                        <ul class="list-tags">
-                            <li class="list-item-tags">#html</li>
-                            <li class="list-item-tags">#css</li>
-                            <li class="list-item-tags">#easy</li>
-                        </ul>
-                    </section>
-                    <section class="card">
-                        <button class="add-to-bookmark empty">
-                            <i class="fa-regular fa-bookmark fa-2xl"></i>
-                        </button>
-                        <h4> What are some of the values can the does the display property hold? </h4>
-                        <br/>
-                        <button class="show-answer">Show Answer</button>
-                        <button class="hide-answer" style="display: none;">Hide Answer</button>
-                        <div class="answer">inline, block, flex, grid, inline-block</div>
-                        <ul class="list-tags">
-                            <li class="list-item-tags">#html</li>
-                            <li class="list-item-tags">#css</li>
-                            <li class="list-item-tags">#easy</li>
-                        </ul>
-                    </section>
-                    <section class="card">
-                        <button class="add-to-bookmark empty">
-                            <i class="fa-regular fa-bookmark fa-2xl"></i>
-                        </button>
-                        <h4> What command allows me to create a file in a folder via the terminal? </h4>
-                        <br/>
-                        <button class="show-answer">Show Answer</button>
-                        <button class="hide-answer" style="display: none;">Hide Answer</button>
-                        <div class="answer">touch</div>
-                        <ul class="list-tags">
-                            <li class="list-item-tags">#git</li>
-                            <li class="list-item-tags">#terminal</li>
-                        </ul>
-                    </section>
-                    <section class="card">
-                        <button class="add-to-bookmark empty">
-                            <i class="fa-regular fa-bookmark fa-2xl"></i>
-                        </button>
-                        <h4> What is the command to navigate into a folder? </h4>
-                        <br/>
-                        <button class="show-answer">Show Answer</button>
-                        <button class="hide-answer" style="display: none;">Hide Answer</button>
-                        <div class="answer">cd</div>
-                        <ul class="list-tags">
-                            <li class="list-item-tags">#git</li>
-                            <li class="list-item-tags">#terminal</li>
-                        </ul>
-                    </section>
-                    <section class="card">
-                        <button class="add-to-bookmark filled">
-                            <i class="fa-solid fa-bookmark fa-2xl"></i>
-                        </button>
-                        <h4> What command allows me to create a directory from the terminal? </h4>
-                        <br/>
-                        <button class="show-answer">Show Answer</button>
-                        <button class="hide-answer" style="display: none;">Hide Answer</button>
-                        <div class="answer">mkdir</div>
-                        <ul class="list-tags">
-                            <li class="list-item-tags">#git</li>
-                            <li class="list-item-tags">#terminal</li>
-                        </ul>
-                    </section>
-                    <section class="card">
-                        <button class="add-to-bookmark filled">
-                            <i class="fa-solid fa-bookmark fa-2xl"></i>
-                        </button>
-                        <h4> What is the command to create a local repository? </h4>
-                        <button class="show-answer">Show Answer</button>
-                        <button class="hide-answer" style="display: none;">Hide Answer</button>
-                        <div class="answer">git init</div>
-                        <ul class="list-tags">
-                            <li class="list-item-tags">#git</li>
-                            <li class="list-item-tags">#terminal</li>
-                        </ul>
-                    </section>
-                    <section class="card">
-                        <button class="add-to-bookmark empty">
-                            <i class="fa-regular fa-bookmark fa-2xl"></i>
-                        </button>
-                        <h4> How do you make visually hidden content? </h4>
-                        <br/>
-                        <button class="show-answer">Show Answer</button>
-                        <button class="hide-answer" style="display: none;">Hide Answer</button>
-                        <div class="answer">Via Screen reader accessiblility</div>
-                        <ul class="list-tags">
-                            <li class="list-item-tags">#html</li>
-                            <li class="list-item-tags">#css</li>
-                            <li class="list-item-tags">#easy</li>
-                        </ul>
-                    </section>
-                    <section class="card">
-                        <button class="add-to-bookmark empty">
-                            <i class="fa-regular fa-bookmark fa-2xl"></i>
-                        </button>
-                        <h4> What will the justify-content : center command do? </h4>
-                        <br/>
-                        <button class="show-answer">Show Answer</button>
-                        <button class="hide-answer" style="display: none;">Hide Answer</button>
-                        <div class="answer">aligns the flexible container's items when the items do not use all available space on the main-axis (horizontally)</div>
-                        <ul class="list-tags">
-                            <li class="list-item-tags">#html</li>
-                            <li class="list-item-tags">#css</li>
-                            <li class="list-item-tags">#medium</li>
-                        </ul>
-                    </section>
-                    <section class="card">
-                        <button class="add-to-bookmark empty">
-                            <i class="fa-regular fa-bookmark fa-2xl"></i>
-                        </button>
-                        <h4>What css property allows me to align text in a container? </h4>
-                        <br/>
-                        <button class="show-answer">Show Answer</button>
-                        <button class="hide-answer" style="display: none;">Hide Answer</button>
-                        <div class="answer">text-align</div>
-                        <ul class="list-tags">
-                            <li class="list-item-tags">#html</li>
-                            <li class="list-item-tags">#css</li>
-                            <li class="list-item-tags">#easy</li>
-                        </ul>
-                    </section>
-                </div>
-                <script src="./js/script.js"></script>
+                <div class="cards" id="card-container"></div>
             </section>
         </main>
 
@@ -192,4 +45,6 @@
         </footer>
 
     </body>
+    <script src="./js/cards.js" type="module" defer></script>
+    <script src="./js/script.js" type="module" defer></script>
 </html>
